--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" href="..\img\favicon.png">
 
     <!-- PAGE STYLING -->
-    <link rel="stylesheet" type="text/css" href="styles\style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 
 <body>
@@ -26,26 +26,32 @@
 <div class="wrapper">
     <header>
         <nav>
-            <div class="alg-setup">
-                <p>
-                    <label for="array-size">Size:</label>
-                    <input id="array-size" type="range" min=20 max=150 step=1 value=80>
-                </p>
+            <div class="flex-container">
+                <div class="alg-setup">
+                    <p>
+                        <label for="array-size">Size:</label>
+                        <input id="array-size" type="range" min=10 max=150 step=10 value=100>
+                    </p>
 
-                <p>
-                    <label for="array-speed">Speed:</label>
-                    <input id="array-speed" type="range" min=1 max=5 step=1 value=4>
-                </p>
+                    <p>
+                        <label for="array-speed">Speed:</label>
+                        <input id="array-speed" type="range" min=1 max=5 step=1 value=4>
+                    </p>
 
-                <button id="array-setup">Setup Array</button>
-            </div>
+                    <button id="array-setup">Setup Array</button>
+                </div>
 
-            <div class="alg-select">
-                <button >Bubble</button>
-                <button >Selection</button>
-                <button >Insertion</button>
-                <button >Merge</button>
-                <button >Quick</button>
+                <div class="alg-select">
+                    <button>Bubble</button>
+                    <button>Selection</button>
+                    <button>Insertion</button>
+                    <button>Merge</button>
+                    <button>Quick</button>
+                </div>
+
+                <div class="alg-run">
+                    <button>Run!</button>
+                </div>
             </div>
         </nav>
     </header>
@@ -56,7 +62,7 @@
     </div>
 
     <footer>
-        <a href="index.php" class="scroll-up">Back to Top</a>
+        <a href="index.html" class="scroll-up">Back to Top</a>
         <i>~ Ben Madelin ~</i>
     </footer>
 </div>
