Device Boundaries and Scaling formatted suitable for desktop and tablet/mobile proportions.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <input id="array-speed" type="range" min=1 max=5 step=1 value=3>
                     </p>
 
-                    <button id="array-setup">Setup Array</button>
+                    <button id="array-setup">Setup</button>
                 </div>
 
                 <div class="alg-select">
@@ -49,9 +49,9 @@
                     <button>Quick</button>
                 </div>
 
-                <div class="alg-run">
+                <!--<div class="alg-run">
                     <button>Run!</button>
-                </div>
+                </div>-->
             </div>
         </nav>
     </header>
