Footer styled according to page standard.

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
     </div>
 
     <footer>
-        <a href="index.html" class="scroll-up">Back to Top</a>
-        <i>~ Ben Madelin ~</i>
+        <i class="credit">~ Ben Madelin ~</i>
     </footer>
 </div>
 </body>
