Switch case added to the alg buttons eventlistener allowing the appropriate method to run.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 </div>
 
 <script type="text/javascript" src="scripts/display-handler.js"></script>
+<script type="text/javascript" src="scripts/alg-helper.js"></script>
 </body>
 
 </html>
