--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
     </footer>
 </div>
 
+<!-- SORTING ALGORITHMS -->
+<script type="text/javascript" src="scripts/alg/bubble-sort.js"></script>
+
+<!-- DOCUMENT MODULES -->
 <script type="text/javascript" src="scripts/display-handler.js"></script>
 <script type="text/javascript" src="scripts/alg-helper.js"></script>
 </body>
