Selection Sorting Algorithm implemented.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
 <!-- SORTING ALGORITHMS -->
 <script type="text/javascript" src="scripts/alg/bubble-sort.js"></script>
+<script type="text/javascript" src="scripts/alg/selection-sort.js"></script>
 
 <!-- DOCUMENT MODULES -->
 <script type="text/javascript" src="scripts/display-handler.js"></script>
