Quick Sort method has been implemented.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 <script type="text/javascript" src="scripts/alg/bubble-sort.js"></script>
 <script type="text/javascript" src="scripts/alg/selection-sort.js"></script>
 <script type="text/javascript" src="scripts/alg/insertion-sort.js"></script>
+<script type="text/javascript" src="scripts/alg/merge-sort.js"></script>
+<script type="text/javascript" src="scripts/alg/quick-sort.js"></script>
 
 <!-- DOCUMENT MODULES -->
 <script type="text/javascript" src="scripts/display-handler.js"></script>
