Added git repo link to credit.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <footer>
-        <i class="credit">~ Ben Madelin ~</i>
+        <a href="https://github.com/madelinben/visual-algorithms"><i class="credit">~ Ben Madelin ~</i></a>
     </footer>
 </div>
 
